# Otus-cpp-lesson-04

./: .travis.yml  CMakeLists.txt  annotated.html  classes.html  classprint__ip__internal-members.html  classprint__ip__internal.html  classprint__ip__internal_3_01false_00_01T_01_4-members.html  classprint__ip__internal_3_01false_00_01T_01_4.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  group__PRINT__TAMPLATES.html  index.html  main.cpp  main_8cpp.html  main_8cpp__incl.dot  main_8cpp__incl.map  main_8cpp__incl.md5  modules.html  print__ip_8hpp.html  print__ip_8hpp__dep__incl.dot  print__ip_8hpp__dep__incl.map  print__ip_8hpp__dep__incl.md5  print__ip_8hpp__incl.dot  print__ip_8hpp__incl.map  print__ip_8hpp__incl.md5  print__ip_8hpp_source.html  print_ip.hpp  structprint__tuple-members.html  structprint__tuple.html  structprint__tuple_3_010_00_01Args_8_8_8_4-members.html  structprint__tuple_3_010_00_01Args_8_8_8_4.html  test__print__ip_8cpp.html  test__print__ip_8cpp__incl.dot  test__print__ip_8cpp__incl.map  test__print__ip_8cpp__incl.md5  (+1 more)
search/: all_0.js  all_3.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  groups_0.js  search.js
